fix mobile menu spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,7 +41,7 @@ body {
 }
 
 .greedy-nav a {
-  margin: 0 0.95rem;
+  margin: 0 0.5rem;
 }
 
 div.highlighter-rouge:before, figure.highlight:before {
